# to

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  SUMMARY.md
docs/advanced/: async.md  decorators.md  destructuring.md  enums.md  generators.md  heredoc.md  lambdas.md  operators.md  optional-chaining.md  pattern-matching.md  pipes.md  shapes.md  testing.md  types.md
docs/getting-started/: cli.md  first-program.md  installation.md
docs/guide/: classes.md  control-flow.md  errors.md  functions.md  loops.md  modules.md  variables.md
docs/stdlib/: ffi.md  fs.md  json.md  math.md  process.md  regex.md  time.md  web.md
docs/tooling/: debugger.md  formatter.md  vscode.md
editor/vscode/: language-configuration.json  package-lock.json  package.json
include/: to.h
src/: ast.h  builtins.cpp  builtins.h  codegen.cpp  codegen.h  environment.cpp  environment.h  error.cpp  error.h  ffi.cpp  ffi.h  formatter.cpp  formatter.h  http.cpp  http.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  pkg.cpp  pkg.h  to_stdlib.cpp  to_stdlib.h  vm.cpp  vm.h
tests/examples/: bench.to  build_test.to  classes.to  ffi_test.to  fibonacci.to  full_demo.to  hello.to  helpers.to  import_test.to  new_features.to  stress_classes.to  stress_edge_cases.to  stress_functional.to  stress_nested.to  test_async.to  test_closures.to  test_decorators.to  test_fmt.to  test_generators.to  test_godtier.to  test_heredoc.to  test_operators.to  test_optional.to  test_patterns.to  test_process.to  (+7 more)
wasm/: to_wasm.cpp
(+2 files in other folders)
